"Suite de la version complète de l'appli avec quelques apis connectés"

--- a/pages/creation_tontine/creation_tontine.wxml
+++ b/pages/creation_tontine/creation_tontine.wxml
@@ -129,8 +129,8 @@
 
             </view>
             <view class="modal-footer">
-                <!--<button class="confirm-button" bindtap="confirmModal">-->
-                <button class="confirm-button" bindtap="navigation">
+                <!--<button class="confirm-button" bindtap="navigation ">-->
+                <button class="confirm-button" bind:tap="confirmModal">
                     Suivant
                 </button>
             </view>
