--- a/pages/mes_informations/mes_informations.wxml
+++ b/pages/mes_informations/mes_informations.wxml
@@ -1,23 +1,27 @@
 <navigation-bar title="Weixin" back="{{false}}" color="black" background="#FFF"></navigation-bar>
 
 <scroll-view class="scrollarea">
-  <view style="position: relative; width: 668rpx; background: #d3d3d3; height: 156rpx; left: 41rpx; top: 114rpx; display: block; box-sizing: border-box">
-    <view style="position: relative; width: 478rpx; background: #d3d3d3; height: 90rpx; left: 96rpx; top: 42rpx; display: block; box-sizing: border-box" class="titre">Mes Informations</view>
+  <view >
+    <view  class="titre" style="position: relative; left: 176rpx; top: 166rpx; width: 400rpx; height: 58rpx; display: block; box-sizing: border-box">Mes Informations</view>
     </view>
-  <view style="position: relative; width: 668rpx; height: 320rpx; left: 40rpx; top: 444rpx; display: block; box-sizing: border-box; align-items: center; ">
-    <image style="position: relative; left: 15rpx; top: -276rpx" src="https://mmbiz.qpic.cn/mmbiz_png/icTdbqWNOwNQ0ia79enzYJBsZ3CIkLQGe39qeOxbpT9oM9KaCthzBa0PF75xzBGjZQGlM69TDggxpNX7ACibCjjtw/0?wx_fmt=png&t=1614824466" />
+  <view style="position: relative; width: 668rpx; height: 320rpx; left: 42rpx; top: 456rpx; display: block; box-sizing: border-box; align-items: center">
+    <image style="position: relative; left: 184rpx; top: -246rpx; width: 300rpx; height: 300rpx; display: inline-block; box-sizing: border-box; border-radius: 100%" src="https://mmbiz.qpic.cn/mmbiz_png/icTdbqWNOwNQ0ia79enzYJBsZ3CIkLQGe39qeOxbpT9oM9KaCthzBa0PF75xzBGjZQGlM69TDggxpNX7ACibCjjtw/0?wx_fmt=png&t=1614824466" />
   
   
-    <view style="position: relative; width: 100%; height: 100px; padding: 10px; left: -20rpx; top: -130rpx">
+    <view style="position: relative; width: 702rpx; height: 522rpx; padding: 10px; left: -18rpx; top: -109rpx; display: block; box-sizing: border-box">
       <form bindsubmit="">
-        <input type="text" name="" id="" placeholder="Pseudo" value="{{}}" class="input" />
-        <input type="text" name="" id="" placeholder="Votre contact" value="{{}}" class="input" /> 
-  
-        <view style="position: relative; width: 100%; background: #d3d3d3; height: 100px; left: 0rpx; top: 0rpx"></view>
-      </form>
+        <input style="width: 663rpx; height: 93rpx; display: block; box-sizing: border-box" type="text" name="" id="" placeholder="Pseudo" value="{{}}" class="input" />
+        <input style="width: 660rpx; height: 89rpx; display: block; box-sizing: border-box" type="text" name="" id="" placeholder="Votre contact" value="{{}}" class="input" />
+      
+      
+      
+        <text style="position: relative; left: 291rpx; top: -353rpx">lorem</text>
+      
+        <button>Modifier</button>
+        </form>
     </view>
   
-    <view style="position: relative; width: 100%; background: #d3d3d3; height: 100px; left: 0rpx; top: -22rpx"></view>
+    
     </view>
 
   
